manifests/tools/manifests/wordpress/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
  labels:
    shared-gateway-access: 'true'
