manifests/tools/manifests/wordpress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-server
spec:
  hostnames:
  - wp.matoru.ru
  parentRefs:
  - name: common
    namespace: kube-system
  rules:
  - backendRefs:
    - name: wordpress
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /wp-admin
    - path:
        type: PathPrefix
        value: /wp-includes
    - path:
        type: PathPrefix
        value: /wp-content
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-public
spec:
  hostnames:
  - matoru.ru
  parentRefs:
  - name: common
    namespace: kube-system
  rules:
  - backendRefs:
    - name: wordpress
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /blog
